apps/site/styles/index.css
@charset "utf-8";

/* IDE Support
 * We recommend Stylelint and Tailwind Extensions for better IDE support.
 * @see https://marketplace.visualstudio.com/items?itemName=bradlc.vscode-tailwindcss
 * @see https://marketplace.visualstudio.com/items?itemName=stylelint.vscode-stylelint
*/

@import 'tailwindcss';
@import '@node-core/ui-components/src/styles/index.css';
@import '@node-core/rehype-shiki/index.css';

/**
 * To enhance readability for Korean users, line spacing is increased,
 * line breaks in the middle of words are prevented, and long words are
 * managed to avoid disrupting the layout.
 */
html[lang='ko'] {
  @apply leading-7
    break-words
    break-keep;
}

